import { mountFeature } from '../shared-ui/MobileFeatureShell';
mountFeature('rooms', 'Rooms', () => import('./RoomsPage'));
